Pre break commit... added a couple buttons and whatnot

--- a/blockedSite.html
+++ b/blockedSite.html
@@ -1,7 +1,7 @@
 <!doctype html>
 <html>
   <head>
-    <title>AccountPuppy</title>
+    <title>Blacklist</title>
 
     <link rel=stylesheet href="bootstrap/css/bootstrap.min.css" type="text/css" >
 
