Changed structure such that background maintains a map of all tabs by id and their currently blocked state. This allows us to request the currently blocked site simply by calling afunction on the bakcground page.

--- a/blockedSite.html
+++ b/blockedSite.html
@@ -12,11 +12,13 @@
   <div class="container">
     <hr class="featurette-divider">
     <div class="featurette" id="main-container">
-      <h1>This site has been blocked by SiteBlocker.</h1>
+      <h1 id="blockMessage"></h1>
     </div>
     <hr class="featurette-divider">
   </div>
 
-  <script type="text/javascript" src="js/popup.js"></script>
+  <!--<script type="text/javascript" src="js/popup.js"></script>-->
+  <script type="text/javascript" src="js/jquery-1.8.2.min.js"></script>
+  <script type="text/javascript" src="js/blockedSite.js"></script>
   </body>
 </html>
