--- a/popup.html
+++ b/popup.html
@@ -14,7 +14,7 @@
     <div class="featurette" id="main-container">
       <button class="btn" id="blacklistButton" >Block this site</button>
       <hr class="featurette-divider">
-      <button class="btn" id="clearBlacklistButton" >Clear Blacklist</button>
+      <button class="btn" id="clearBlacklistButton" >Unblock</button>
     </div>
     <hr class="featurette-divider">
   </div>
