--- a/popup.html
+++ b/popup.html
@@ -12,9 +12,7 @@
   <div class="container">
     <hr class="featurette-divider">
     <div class="featurette" id="main-container">
-      <button class="btn" id="blacklistButton" >Block this site</button>
-      <hr class="featurette-divider">
-      <button class="btn" id="clearBlacklistButton" >Unblock</button>
+      <button class="btn" id="blacklistButton" ></button>
     </div>
     <hr class="featurette-divider">
   </div>
