--- a/blockedSite.html
+++ b/blockedSite.html
@@ -8,17 +8,37 @@
     <!-- JavaScript and HTML must be in separate files for security. -->
   </head>
   <body>
+  
+  <table style="width:100%; height:100%; position:absolute; text-align:center;" >
+    <tr>
+      <td style="width:100%;">
+        <table style="margin-left:auto; margin-right:auto;">
+          <tr>
+            <td style="min-width:300px; min-height:300px; height:300px; width:300px;" >
+              <img src="icon.large.png" />
+            </td>
+            <td>
+              <div class="featurette">
+                <h1 id="blockMessage"></h1>
+              </div>
+            </td>
+          </tr>
+        </table>
+      </td>
+    </tr>
+  </table>
 
-  <div class="container">
-    <hr class="featurette-divider">
-    <div class="featurette" id="main-container">
-      <h1 id="blockMessage"></h1>
+  <div class="modal fade" id="unlistModal">
+    <div class="modal-header">
+      <h3 id="countdown"></h3>
     </div>
-    <hr class="featurette-divider">
+    <div class="modal-footer">
+      <a href="#" id="cancelUnlist" class="btn btn-danger btn-large" style="display:block;" >Cancel Unlisting</a>
+    </div>
   </div>
-
-  <!--<script type="text/javascript" src="js/popup.js"></script>-->
+  
   <script type="text/javascript" src="js/jquery-1.8.2.min.js"></script>
+  <script type="text/javascript" src="bootstrap/js/bootstrap.min.js"></script>
   <script type="text/javascript" src="js/blockedSite.js"></script>
   </body>
 </html>
