--- a/index.html
+++ b/index.html
@@ -8,12 +8,16 @@
     <!-- JavaScript and HTML must be in separate files for security. -->
   </head>
   <body>
-    <div class="container" style="position:absolute; top:50%; left:50%; margin-top:-96px; margin-left:-585px;">
+    <div class="container" style="position:absolute; top:50%; left:50%; margin-top:-132px; margin-left:-585px;">
       <h1>Blacklist</h1>
       <hr class="featurette-divider">
       <div class="featurette">
         <h2>Created by Rahul Gupta-Iwasaki</h2>
-        <h3>Source can be found at <a href="https://github.com/rahulgi/SiteBlocker">github.com/rahulgi/SiteBlocker</a> and is released under the <a href="https://github.com/rahulgi/SiteBlocker/blob/master/LICENSE">MIT License</a></h3>
+        <h3>Source can be found at <a href="https://github.com/rahulgi/SiteBlocker">github.com/rahulgi/SiteBlocker</a> and is released under the <a href="https://github.com/rahulgi/SiteBlocker/blob/master/LICENSE">MIT License</a></h3> 
+      </div>
+      <hr class="feaurette-divider">
+      <div class="featurette">
+        <h4 style="float:right">Send bugs to <a href="mailto:ContactSiteBlocker@gmail.com">ContactSiteBlocker@gmail.com</a> or create an issue on <a href="">GitHub</a>.</h4>
       </div>
     </div>
   </body>
