--- a/index.html
+++ b/index.html
@@ -13,11 +13,11 @@
       <hr class="featurette-divider">
       <div class="featurette">
         <h2>Created by Rahul Gupta-Iwasaki</h2>
-        <h3>Source can be found at <a href="https://github.com/rahulgi/SiteBlocker">github.com/rahulgi/SiteBlocker</a> and is released under the <a href="https://github.com/rahulgi/SiteBlocker/blob/master/LICENSE">MIT License</a></h3> 
+        <h3>Source can be found at <a href="https://github.com/rahulgi/Blacklist">github.com/rahulgi/Blacklist</a> and is released under the <a href="https://github.com/rahulgi/Blacklist/blob/master/LICENSE">MIT License</a></h3> 
       </div>
       <hr class="feaurette-divider">
       <div class="featurette">
-        <h4 style="float:right">Send bugs to <a href="mailto:ContactSiteBlocker@gmail.com">ContactSiteBlocker@gmail.com</a> or create an issue on <a href="">GitHub</a>.</h4>
+        <h4 style="float:right">Send bugs to <a href="mailto:ContactBlacklist@gmail.com">ContactBlacklist@gmail.com</a> or create an issue on <a href="https://github.com/rahulgi/Blacklist/issues">GitHub</a>.</h4>
       </div>
     </div>
   </body>
