Added google analytics tracking code.

--- a/index.html
+++ b/index.html
@@ -5,7 +5,19 @@
 
     <link rel=stylesheet href="bootstrap/css/bootstrap.min.css" type="text/css" >
 
-    <!-- JavaScript and HTML must be in separate files for security. -->
+    <script type="text/javascript">
+
+      var _gaq = _gaq || [];
+      _gaq.push(['_setAccount', 'UA-29217767-2']);
+      _gaq.push(['_trackPageview']);
+
+      (function() {
+        var ga = document.createElement('script'); ga.type = 'text/javascript'; ga.async = true;
+        ga.src = ('https:' == document.location.protocol ? 'https://ssl' : 'http://www') + '.google-analytics.com/ga.js';
+        var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(ga, s);
+      })();
+
+    </script>
   </head>
   <body>
     <div class="container" style="position:absolute; top:50%; left:50%; margin-top:-132px; margin-left:-585px;">
