Added webstore link

--- a/index.html
+++ b/index.html
@@ -21,11 +21,15 @@
   </head>
   <body>
     <div class="container" style="position:absolute; top:50%; left:50%; margin-top:-132px; margin-left:-585px;">
-      <h1>Blacklist</h1>
+      <h1>
+        <a href="https://chrome.google.com/webstore/detail/blacklist/jbpccandodannohfaoncogijbkfcmpgo" style="color:black">
+          Blacklist
+        </a>
+      </h1>
       <hr class="featurette-divider">
       <div class="featurette">
         <h2>Created by Rahul Gupta-Iwasaki</h2>
-        <h3>Source can be found at <a href="https://github.com/rahulgi/Blacklist">github.com/rahulgi/Blacklist</a> and is released under the <a href="https://github.com/rahulgi/Blacklist/blob/master/LICENSE">MIT License</a></h3> 
+        <h3>Source can be found at <a href="https://github.com/rahulgi/Blacklist">github.com/rahulgi/Blacklist</a> and is released under the <a href="https://github.com/rahulgi/Blacklist/blob/master/LICENSE">MIT License</a></h3>
       </div>
       <hr class="feaurette-divider">
       <div class="featurette">
