Adding ability to block only specific URLs

--- a/popup.html
+++ b/popup.html
@@ -12,7 +12,8 @@
   <div class="container">
     <hr class="featurette-divider">
     <div class="featurette" id="main-container">
-      <button class="btn" id="blacklistButton" ></button>
+      <button class="btn" id="blacklistSiteButton" ></button>
+      <button class="btn" id="blacklistUrlButton" ></button>
     </div>
     <hr class="featurette-divider">
   </div>
