--- a/index.html
+++ b/index.html
@@ -6,7 +6,17 @@
     <link rel=stylesheet href="bootstrap/css/bootstrap.min.css" type="text/css" >
 
     <script type="text/javascript">
-      window.location.href = "https://rahulgi.com/blacklist";
+
+      var _gaq = _gaq || [];
+      _gaq.push(['_setAccount', 'UA-29217767-2']);
+      _gaq.push(['_trackPageview']);
+
+      (function() {
+        var ga = document.createElement('script'); ga.type = 'text/javascript'; ga.async = true;
+        ga.src = ('https:' == document.location.protocol ? 'https://ssl' : 'http://www') + '.google-analytics.com/ga.js';
+        var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(ga, s);
+      })();
+
     </script>
   </head>
   <body>
