add shaming messages, make unblocking harder

--- a/blockedSite.html
+++ b/blockedSite.html
@@ -20,6 +20,7 @@
             <td>
               <div class="featurette">
                 <h1 id="blockMessage"></h1>
+                <h2 style="color: #ff3a88;">Focus on your goals and don't waste time on useless websites.</h1>
               </div>
             </td>
           </tr>
@@ -30,10 +31,12 @@
 
   <div class="modal fade" id="unlistModal">
     <div class="modal-header">
-      <h3 id="countdown"></h3>
+      <h3 style="color: #ff3a88;">Take a bit of time to think if you Really want to do this...</h3>
+      <h4 id="countdown"></h4>
     </div>
-    <div class="modal-footer">
-      <a href="#" id="cancelUnlist" class="btn btn-danger btn-large" style="display:block;" >Cancel Unlisting</a>
+    <div id="unblockBtn" class="modal-footer hide">
+      <!-- <a href="#" id="cancelUnlist" class="btn btn-danger btn-large" style="display:block;" >Cancel Unlisting</a> -->
+      <a href="#" id="doUnlist" class="btn btn-danger btn-large" style="display:block;" >Cancel Unlisting</a>
     </div>
   </div>
 
