--- a/blockedSite.html
+++ b/blockedSite.html
@@ -35,8 +35,7 @@
       <h4 id="countdown"></h4>
     </div>
     <div id="unblockBtn" class="modal-footer hide">
-      <!-- <a href="#" id="cancelUnlist" class="btn btn-danger btn-large" style="display:block;" >Cancel Unlisting</a> -->
-      <a href="#" id="doUnlist" class="btn btn-danger btn-large" style="display:block;" >Cancel Unlisting</a>
+      <a href="#" id="doUnlist" class="btn btn-danger btn-large" style="display:block;" >Un-blacklist the site</a>
     </div>
   </div>
 
